# fastapi-test-settings

./: .env  LICENSE  README.md  pyproject.toml
app/: config.py  factory.py
app/tests/: conftest.py  test_main.py
