[project]
name = "fastapi-test-settings"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "fastapi[standard]>=0.115.8",
  "pydantic-settings>=2.8.0",
  "python-dotenv>=1.0.1",
]

[dependency-groups]
dev = ["pytest>=8.3.4"]
